2004-07-29  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b75

	* Fix: Typo in config data.

2004-07-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b74

	* Change: Switch from rand() to mt_rand() because it's faster,
	  and more random.  Also, add mt_srand() in places where we
	  were missing srand() originally.

2004-07-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b73

	* Fix: Typo in register.php prevented user registration

	* Change: Unset the old invalid geeklog_dir during confirm

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b72

	* Change: Completely eliminate the "embedded_inside_type" variable,
	  since *everything* is auto-detected anyway and it really wasn't used.  
	  GeekLog still requires one variable, but it was already dealt with as
	  needed.

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b71

        * Fix: Prevent the random block from grabbing an album highlight as its
          image.

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b70

        * Fix: Mambo popups failed to operate because the option var wasn't
          set on systems with register_globals disabled - how did this
          ever work?

        * Fix: Eliminate two shutterfly/print_photos notices in edit_appearance

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b69

        * Fix: I believe that this should fix the issue that some users have
          had with extremely large Gallery installations during the upgrade
          script, where the albums just don't show up on the page at all.

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b68

        * Fix: Display the 'view comments in nested album' links for all users
          in commentboxtop.inc.  This was restricted to admin/owner only, so it
          broke navigation when view comments was allowed for all users.

        * Change: Fix uninitialized variable notice
