@@ -1,3 +1,11 @@
+2004-07-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b76
+
+	* Fix: view_comments would display albums without read permissions
+	  (user could not see anything except highlight image and album title)
+
+	* Change: Prevent the old 'example' geeklog_dir from causing a 
+	  security violation
+
 2004-07-29  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b75
 
 	* Fix: Typo in config data.
